--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "8.9.1"
+  },
   "license": "ISC",
   "description": ""
 }
