--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "USER",
   "contributors": [],
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4"
   },
   "main": "index.js",
   "scripts": {
