--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "chat-app",
+  "name": "node-chat-app",
   "version": "1.0.0",
-  "keywords": [
-    "util",
-    "functional",
-    "server",
-    "client",
-    "browser"
-  ],
-  "author": "USER",
-  "contributors": [],
-  "dependencies": {
-    "express": "^4.16.2",
-    "socket.io": "^2.0.4"
-  },
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
-    "node": "8.9.1"
+    "node": "6.2.2"
   },
+  "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.14.0",
+    "mocha": "^5.0.0",
+    "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "nodemon": "^1.14.11"
+  }
 }
