--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "mocha": "^5.0.0",
+    "moment": "^2.20.1",
     "socket.io": "^1.7.4"
   },
   "devDependencies": {
